styling: fix txt and img alignment

--- a/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/landing_page.less
+++ b/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/landing_page.less
@@ -62,6 +62,10 @@
      height: @font-size-base;
  }
 
+ .inline-orcid-icon {
+    margin-bottom: 3px;
+  }
+
  .thin-line {
      margin: 0rem 0rem 0.5rem 0rem !important;
  }
